Fixed z-index

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -62,6 +62,7 @@ h1 {
     justify-content: space-evenly;
     margin-bottom: auto;
     margin-top: -112px;
+    z-index: 1;
 }
 
 .preview-arrow {
@@ -80,6 +81,7 @@ h1 {
     margin-right: 64px;
     margin-top: 64px;
     cursor: pointer;
+    z-index: 2;
 }
 
 #image-preview {
